# Musuem-chatbot

./: .gitignore  Chatbot Question and answers.xlsx  README.md  STEP_BY_STEP_GUIDE.md  TECHNICAL_GUIDE.md  Unique_Museum_Art_Plan.xlsx  agent.py  analyze_ppt.py  app.py  database_view.html  extract_pdf_script.py  migrate_db.py  ppt_analysis.txt  pyproject.toml  readme.txt  run.bat  server.py  show_db.py
static/: chat_persistence.js
templates/: base.html  home.html  landing.html  login.html  signup.html
